...
                  21,
                  "content://com.neptune.provider/sample/sample1.wav"),
              Sample(
                  2,
                  "Sample 2",
                  "This is a sample description 2",
                  42,
                  listOf("#sea"),
                  42,
                  42,
                  42,
                  "content://com.neptune.provider/sample/sample2.wav"),
              Sample(
...
